# ci-pipeline-python-testing

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: app.py
tests/api/: test_api.py
tests/backend/: test_backend.py
tests/frontend/: test_frontend.py
